--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -307,6 +307,7 @@
                                     <strong>{% trans "AR" %}</strong>{% trans " automatic and precise captures" %}</li>
                                 <li class="py-4"><strong>{% trans "Secure" %}</strong>{% trans " all HTTPS" %}</li>
                                 <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " use both MyMensor and MyMensorAR apps, you choose!" %}</li>
+                                <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " up to five installs (Two apps in the same device is one install!)" %}</li>
                             </ul>
 
                             <button class="btn btn-lg btn-secondary btn-block">{% trans "COMING SOON" %}</button>
