--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -180,7 +180,7 @@
                     <div class="row app-align-center py-3">
                         <div class="col-sm-5 push-sm-7 py-5" style="background-color: #1DA1F2">
                             <h6 class="text-muted text-uppercase">{% trans "Simplified Sharing" %}</h6>
-                            <h3>{% trans " Share captures automatically via Facebook, Twitter and Email." %}</h3>
+                            <h3>{% trans " Share captures automatically via Twitter and Email." %}</h3>
                             <p class="lead mb-4 text-muted">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
                             <a class="btn btn-secondary btn-lg btn-borderless"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
