--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -165,7 +165,7 @@
                         </div>
                         <div class="col-md-6 pull-md-5">
                             <h6 class="text-gray-dark text-uppercase">{% trans "Control Made Simple" %}</h6>
-                            <h3>{% trans "Revolutionize your control practices. Work with portability of information and reality." %}</h3>
+                            <h3>{% trans "Simplify your control practices. Work with portability of information and reality." %}</h3>
                             <p class="lead mb-4 text-gray-dark">{% trans "Using our web application you have access to all your information anywhere, anytime. The reality will be portable for you to be transported to wherever you are." %}</p>
                             <a class="btn btn-secondary btn-lg btn-borderless" href="{% url 'docs' %}"
                                role="button">{% trans "Read our docs" %}</a>
@@ -224,7 +224,7 @@
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="{% static "images/svgar.svg" %}">
                             <p>
-                                <strong>{% trans "Augmented Reality" %}</strong>{% trans " Capture the image always in the same position. Images are filled automatically. (Available only with MyMensorAR and up)" %}
+                                <strong>{% trans "Augmented Reality" %}</strong>{% trans " Capture the image always in the same position. Images are filled automatically. (Available only with MyMensorAR mobile client)" %}
                             </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
@@ -246,7 +246,7 @@
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="{% static "images/svgdatabasecloud.svg" %}">
                             <p>
-                                <strong>{% trans "Database" %}</strong>{% trans " All data safe. (Available only with MyMensorAR an up)" %}
+                                <strong>{% trans "Database" %}</strong>{% trans " All data safe. (Available only with MyMensor MEDIA AND DATA an up)" %}
                             </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
