--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -325,6 +325,8 @@
                                 <li class="py-4"><strong>{% trans "ALL MyMensor Media FEATURES PLUS" %}</strong></li>
                                 <li class="py-4">
                                     <strong>{% trans "Database" %}</strong>{% trans " build your own bigdata" %}</li>
+                                <li class="py-4">
+                                    <strong>{% trans "Data Features" %}</strong>{% trans " Process, edit, know the status and analyse your data" %}</li>
                             </ul>
                             <a class="btn btn-primary btn-lg btn-block"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
