--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -301,7 +301,7 @@
                                 <li class="py-4">
                                     <strong>{% trans "Certification" %}</strong>{% trans " time and location" %}</li>
                                 <li class="py-4">
-                                    <strong>{% trans "Sharing" %}</strong>{% trans " automatic sharing to Facebook, Twitter and Email." %}
+                                    <strong>{% trans "Sharing" %}</strong>{% trans " automatic sharing to Twitter and Email." %}
                                 </li>
                                 <li class="py-4">
                                     <strong>{% trans "AR" %}</strong>{% trans " automatic and precise captures" %}</li>
