--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -330,7 +330,7 @@
                             </ul>
                             <a class="btn btn-primary btn-lg btn-block"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
-                               role="button">{% trans "Start your 30-day free trial Now" %}</a>
+                               role="button">{% trans "Start your 30-day free trial Now!" %}</a>
                         </div>
                         <div class="col-md-4 px-4 pb-1 mb-5">
                             <div class="px-2">
