--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -110,7 +110,7 @@
                                 <p class="lead mb-4 text-muted">{% trans " Use images to control everything remotely <br> using an Android smartphone." %}</p>
                                 <a class="btn btn-primary btn-lg"
                                    href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
-                                   role="button">{% trans "Try Now" %}</a>
+                                   role="button">{% trans "Start your 30-day free-trial now!" %}</a>
                             </div>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                             <p class="lead mb-4 text-muted">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
                             <a class="btn btn-secondary btn-lg btn-borderless"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
-                               role="button">{% trans "Try Now" %}</a>
+                               role="button">{% trans "Start your 30-day free-trial now!" %}</a>
                         </div>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
             <div class="block app-ribbon py-5">
                 <div class="container text-xs-center" style="padding-bottom: 3rem;">
                     <h6 class="text-muted text-uppercase mb-2">{% trans "30-day free trial" %}</h6>
-                    <h3>{% trans "Try Now! No Credit Card required during trial period!" %}</h3>
+                    <h3>{% trans "Start your 30-day free-trial now! No Credit Card required during trial period!" %}</h3>
                 </div>
             </div>
 
@@ -330,7 +330,7 @@
                             </ul>
                             <a class="btn btn-primary btn-lg btn-block"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
-                               role="button">{% trans "Start your 30-day free trial Now!" %}</a>
+                               role="button">{% trans "Start your 30-day free trial now!" %}</a>
                         </div>
                         <div class="col-md-4 px-4 pb-1 mb-5">
                             <div class="px-2">
