--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -110,7 +110,7 @@
                                 <p class="lead mb-4 text-muted">{% trans " Use images to control everything remotely <br> using an Android smartphone." %}</p>
                                 <a class="btn btn-primary btn-lg"
                                    href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
-                                   role="button">{% trans "Start your 30-day free-trial now!" %}</a>
+                                   role="button">{% trans "Trial free now!" %}</a>
                             </div>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                             <p class="lead mb-4 text-muted">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
                             <a class="btn btn-secondary btn-lg btn-borderless"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
-                               role="button">{% trans "Start your 30-day free-trial now!" %}</a>
+                               role="button">{% trans "Trial free now!" %}</a>
                         </div>
                     </div>
                 </div>
@@ -287,13 +287,8 @@
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2 mb-2">
                                 <h5 class="text-primary mb-4 alert alert-info">MyMensor <strong>Media</strong></h5>
-                                {% if LANGUAGE_CODE == "pt" %}
-                                    <img class="mb-4" src="{% static "images/comingsooncomp_pt.svg" %}">
-                                {% elif LANGUAGE_CODE == "pt-br" %}
-                                    <img class="mb-4" src="{% static "images/comingsooncomp_pt_BR.svg" %}">
-                                {% else %}
-                                    <img class="mb-4" src="{% static "images/comingsooncomp.svg" %}">
-                                {% endif %}
+                                <h3 id="priceeurmedia" style="font-size: 5rem; letter-spacing: -.5rem;"><span id="currency" style="font-size: 2.75rem; position: relative; font-weight: 400; top: -20px; letter-spacing: 0px;">€</span>5,49<span style="font-size: 2rem; letter-spacing: 0px;">{% trans "/month" %}</span></h3>
+                                <h3 hidden id="priceusdmedia" style="font-size: 5rem; letter-spacing: -.5rem;"><span id="currency" style="font-size: 2.75rem; position: relative; font-weight: 400; top: -20px; letter-spacing: 0px;">$</span>5.99<span style="font-size: 2rem; letter-spacing: 0px;">{% trans "/month" %}</span></h3>
                                 <p class="pb-2">{% trans "Even simpler. For those that just need the certification and sharing power." %}</p>
                             </div>
 
@@ -307,17 +302,18 @@
                                     <strong>{% trans "AR" %}</strong>{% trans " automatic and precise captures" %}</li>
                                 <li class="py-4"><strong>{% trans "Secure" %}</strong>{% trans " all HTTPS" %}</li>
                                 <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " use both MyMensor and MyMensorAR apps, you choose!" %}</li>
-                                <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " up to five installs (Two apps in the same device is one install!)" %}</li>
+                                <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " up to five installs per user (Two apps in the same device is one install!)" %}</li>
                             </ul>
-
-                            <button class="btn btn-lg btn-secondary btn-block">{% trans "COMING SOON" %}</button>
+                            <a class="btn btn-primary btn-lg btn-block"
+                               href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
+                               role="button">{% trans "Trial free now!" %}</a>
                         </div>
 
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2">
                                 <h5 class="text-primary mb-4 alert alert-info">MyMensor <strong>Media and Data</strong></h5>
-                                <h3 id="priceeur" style="font-size: 5rem; letter-spacing: -.5rem;"><span id="currency" style="font-size: 2.75rem; position: relative; font-weight: 400; top: -20px; letter-spacing: 0px;">€</span>10,99<span style="font-size: 2rem; letter-spacing: 0px;">{% trans "/month" %}</span></h3>
-                                <h3 hidden id="priceusd" style="font-size: 5rem; letter-spacing: -.5rem;"><span id="currency" style="font-size: 2.75rem; position: relative; font-weight: 400; top: -20px; letter-spacing: 0px;">$</span>11.99<span style="font-size: 2rem; letter-spacing: 0px;">{% trans "/month" %}</span></h3>
+                                <h3 id="priceeurmediaanddata" style="font-size: 5rem; letter-spacing: -.5rem;"><span id="currency" style="font-size: 2.75rem; position: relative; font-weight: 400; top: -20px; letter-spacing: 0px;">€</span>10,99<span style="font-size: 2rem; letter-spacing: 0px;">{% trans "/month" %}</span></h3>
+                                <h3 hidden id="priceusdmediaanddata" style="font-size: 5rem; letter-spacing: -.5rem;"><span id="currency" style="font-size: 2.75rem; position: relative; font-weight: 400; top: -20px; letter-spacing: 0px;">$</span>11.99<span style="font-size: 2rem; letter-spacing: 0px;">{% trans "/month" %}</span></h3>
                                 <p class="pb-2">{% trans "The one size fits all solution. Use Media and Data Features to control your personal and business projects" %}</p>
                             </div>
 
@@ -330,7 +326,7 @@
                             </ul>
                             <a class="btn btn-primary btn-lg btn-block"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
-                               role="button">{% trans "Start your 30-day free trial now!" %}</a>
+                               role="button">{% trans "Trial free now!" %}</a>
                         </div>
                         <div class="col-md-4 px-4 pb-1 mb-5">
                             <div class="px-2">
@@ -387,17 +383,23 @@
                 }
             });
             var counter = 0;
-            var pric_elem0 = document.getElementById("priceeur");
-            var pric_elem2 = document.getElementById("priceusd");
+            var pric_elem1 = document.getElementById("priceeurmedia");
+            var pric_elem2 = document.getElementById("priceusdmedia");
+            var pric_elem3 = document.getElementById("priceeurmediaanddata");
+            var pric_elem4 = document.getElementById("priceusdmediaanddata");
             setInterval(change, 3000);
             function change() {
                 if (counter == 0) {
-                    pric_elem0.hidden=true;
+                    pric_elem1.hidden=true;
                     pric_elem2.hidden=false;
+                    pric_elem3.hidden=true;
+                    pric_elem4.hidden=false;
                 }
                 if (counter == 1) {
-                    pric_elem0.hidden=false;
+                    pric_elem1.hidden=false;
                     pric_elem2.hidden=true;
+                    pric_elem3.hidden=false;
+                    pric_elem4.hidden=true;
                 }
                 counter++;
                 if(counter >= 2) { counter = 0; }
