--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -41,7 +41,7 @@
         <link rel="manifest" href="{% static 'images/manifest.json' %}">
         <link rel="mask-icon" href="{% static 'images/safari-pinned-tab.svg' %}" color="#00afef">
         <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
-        <meta name="msapplication-config" content="images/browserconfig.xml">
+        <meta name="msapplication-config" content="{% static 'images/browserconfig.xml' %}">
         <meta name="theme-color" content="#00afef">
         {% block header %}{% endblock %}
     </head>
