--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -14,8 +14,9 @@
                 MyMensor
             {% endblock %}
         </title>
-        <meta name="MyMensor Website" content="">
-        <meta name="Celtapps" content="">
+        <meta name="description" content="MyMensor Website">
+        <meta name="keywords" content="MyMensor">
+        <meta name="author" content="Celtapps">
 
         <!-- Mobile Specific Metas
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
