--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -7,7 +7,13 @@
     <h3>Use Cases</h3>
     <p></p>
     <hr>
-    <h4>{% trans "Coming soon..." %}</h4>
-
-
+    <h4>{% trans "MyMensor Media Plan - Generic Use" %}</h4>
+    <p>{% trans "Since we have created the first version of SeaMensor (that is the “father” of MyMensor), our friends ask us: - What can I do with this piece of software that I cannot do with my phone camera already?" %}</p>
+    <p>{% trans "At that time, it seemed to be a good question, but as time passes it becomes abundantly clear that forgery in the online world has become epidemic. So, seeing a photo or video that was sent to you in the usual channels is not enough anymore, you need proof!" %}</p>
+    <p>{% trans "One simple but defining feature of MyMensor is that you cannot insert any media into our system that was not produced by one of our mobile apps. So, what you see in a video or photo coming from MyMensor was actually made by a smartphone camera, with no tampering, modification, enhancing, you name it." %}</p>
+    <p>{% trans "On top of that, MyMensor will tell you if time and location were certified and then you can trust that the media is really what it seems to be." %}</p>
+    <p>{% trans "This what I call a generic, simple use to MyMensor Media: media certification." %}</p>
+    <p>{% trans "But there is a lot more to MyMensor Media: automatic filing, automatic sharing etc. So, look no further, " %}
+        <a href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now. " %}</a>{% trans "No Credit Card is required during trial period and, even when you have subscribed, you can easily cancel at any time, just clicking a button!" %}
+    </p>
 {% endblock %}
