--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -8,7 +8,7 @@
     <p></p>
     <hr>
     <h4>{% trans "MyMensor Media Plan - Generic Use" %}</h4>
-    <p>{% trans "Since we have created the first version of SeaMensor (that is the “father” of MyMensor), our friends ask us: - What can I do with this piece of software that I cannot do with my phone camera already?" %}</p>
+    <p>{% trans "Since we have created the first version of SeaMensor (that was the “father” of MyMensor), our friends ask us: - What can I do with this piece of software that I cannot do with my phone camera already?" %}</p>
     <p>{% trans "At that time, it seemed to be a good question, but as time passes it becomes abundantly clear that forgery in the online world has become epidemic. So, seeing a photo or video that was sent to you in the usual channels is not enough anymore, you need proof!" %}</p>
     <p>{% trans "One simple but defining feature of MyMensor is that you cannot insert any media into our system that was not produced by one of our mobile apps. So, what you see in a video or photo coming from MyMensor was actually made by a smartphone camera, with no tampering, modification, enhancing, you name it." %}</p>
     <p>{% trans "On top of that, MyMensor will tell you if time and location were certified and then you can trust that the media is really what it seems to be." %}</p>
@@ -16,4 +16,12 @@
     <p>{% trans "But there is a lot more to MyMensor Media: automatic filing, automatic sharing etc. So, look no further, " %}
         <a href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now. " %}</a>{% trans "No Credit Card is required during trial period and, even when you have subscribed, you can easily cancel at any time, just clicking a button!" %}
     </p>
+    <h4>{% trans "MyMensor Media Plan and Media and Data Plan - Following Jobs Remotely" %}</h4>
+    <p>{% trans "I have a friend that is a very successful accountant in a European country. Once he told me a tale of a client who invested in the construction of an apartment building in Africa." %}</p>
+    <p>{% trans "Everything went well, so he decided to go for the second one." %}</p>
+    <p>{% trans "In the first one he had relied on photos sent to him via email to check the progress of the project, only going on site for the commencement and delivery of the building. So, he followed the same path in the second one." %}</p>
+    <p>{% trans "The trouble is that the second building was delayed, he continued receiving the photos by email, eventually he decided to take a flight and make a surprise visit to the construction site. Of course that you already know what happened." %}</p>
+    <p>{% trans "There was no second building! His money was gone and down there he discovered that he was targeted with a scam known to the locals. He needed a tool to protect him from that." %}</p>
+    <p>{% trans "Using just the MyMensor Media Plan one could follow the project headway remotely using the certified media. Going even deeper you could establish measuring criteria and using MyMensor Media and Data Plan follow up the different aspects of the construction using the tables and graphical MyMensor tools." %}</p>
+    <p>{% trans "Do you have a remote project and it is going astray? We can help mend that! "%}<a href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "Start your 30-day free-trial now. " %}</a></p>
 {% endblock %}
