--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -9,7 +9,7 @@
     <hr>
     <h4>{% trans "General Purpose Use for the MyMensor Media Plan" %}</h4>
     <p>{% trans "Since we have created the first version of SeaMensor (that was the “father” of MyMensor), our friends ask us: - What can I do with this piece of software that I cannot do with my phone camera already?" %}</p>
-    <p>{% trans "At that time, it seemed to be a good question, but as time passes it becomes abundantly clear that forgery in the online world has become epidemic. So, seeing a photo or video that was sent to you in the usual channels is not enough anymore, you need proof!" %}</p>
+    <p>{% trans "At that time, it seemed to be a good question, but as time passes it became abundantly clear that forgery in the online world has become epidemic. So, seeing a photo or video that was sent to you in the usual channels is not enough anymore, you need proof!" %}</p>
     <p>{% trans "One simple but defining feature of MyMensor is that you cannot insert any media into our system that was not produced by one of our mobile apps. So, what you see in a video or photo coming from MyMensor was actually made by a smartphone camera, with no tampering, modification, enhancing, you name it." %}</p>
     <p>{% trans "On top of that, MyMensor will tell you if time and location were certified and then you can trust that the media is really what it seems to be." %}</p>
     <p>{% trans "This what I call a general, simple use to MyMensor Media: media certification." %}</p>
