--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -4,7 +4,7 @@
 {% block title %}Cases - {{ block.super }}{% endblock %}
 {% block content %}
     <p></p>
-    <h3>Use Cases</h3>
+    <h3>{% trans "Use Cases" %}</h3>
     <p></p>
     <hr>
     <h4>{% trans "General Purpose Use for the MyMensor Media Plan" %}</h4>
